apps/vllm/overlays/bge-base-en-v1-5-dev/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vllm-bge-base-en-v1-5-dev
  labels:
    app.kubernetes.io/name: vllm-bge-base-en-v1-5
    app.kubernetes.io/part-of: vllm
    app.kubernetes.io/component: inference
