apps/vllm/overlays/bge-base-en-v1-5-dev/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vllm-bge-base-en-v1-5-ingressroute
  namespace: vllm-bge-base-en-v1-5-dev
  labels:
    app.kubernetes.io/name: vllm-bge-base-en-v1-5
    app.kubernetes.io/instance: bge-base-en-v1-5-dev
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: vllm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vllm-bge-base-en-v1-5.home.nerdylyonsden.io`)
      kind: Rule
      services:
        - name: vllm-bge-base-en-v1-5
          port: 8000
  tls:
    secretName: prod-apps-certificate-secret
